Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/006_decl_and_def.xi
f(x:int):bool

f(x:int):bool
{
    return true
}

//@PRACOWNIA
//@should_not_typecheck
